src-tauri/agaric-engine/src/snapshots/agaric_engine__import__tests__corpus_agaric_source.snap
---
source: agaric-engine/src/import.rs
expression: "serde_json::json!({\n    \"import\": output_shape(parse_logseq_markdown(&text)), \"source\":\n    output_shape(parse_source_outline(&text)), \"paste\":\n    blocks_shape(parse_pasted_text(&text)),\n})"
---
import:
  blocks:
    - block_anchor: 01J0000000000000000000000A
      content: Plan the trip
      depth: 0
      is_code: false
      properties:
        - - todo_state
          - TODO
        - - priority
          - "1"
    - block_anchor: 01J0000000000000000000000B
      content: Book flights
      depth: 1
      is_code: false
      properties:
        - - listStyle
          - bullet
    - block_anchor: 01J0000000000000000000000C
      content: Pick dates
      depth: 1
      is_code: false
      properties:
        - - listStyle
          - ordered
    - block_anchor: 01J0000000000000000000000D
      content: "A block with a [[Page]] link and #tag"
      depth: 0
      is_code: false
      properties: []
  frontmatter: []
  frontmatter_list_items: {}
  warnings: []
paste:
  - block_anchor: 01J0000000000000000000000A
    content: Plan the trip
    depth: 0
    is_code: false
    properties:
      - - todo_state
        - TODO
      - - priority
        - "1"
  - block_anchor: 01J0000000000000000000000B
    content: Book flights
    depth: 1
    is_code: false
    properties:
      - - listStyle
        - bullet
  - block_anchor: 01J0000000000000000000000C
    content: Pick dates
    depth: 1
    is_code: false
    properties:
      - - listStyle
        - ordered
  - block_anchor: 01J0000000000000000000000D
    content: "A block with a [[Page]] link and #tag"
    depth: 0
    is_code: false
    properties: []
source:
  blocks:
    - block_anchor: 01J0000000000000000000000A
      content: Plan the trip
      depth: 0
      is_code: false
      properties:
        - - todo_state
          - TODO
        - - priority
          - "1"
    - block_anchor: 01J0000000000000000000000B
      content: Book flights
      depth: 1
      is_code: false
      properties:
        - - listStyle
          - bullet
    - block_anchor: 01J0000000000000000000000C
      content: Pick dates
      depth: 1
      is_code: false
      properties:
        - - listStyle
          - ordered
    - block_anchor: 01J0000000000000000000000D
      content: "A block with a [[Page]] link and #tag"
      depth: 0
      is_code: false
      properties: []
  frontmatter: []
  frontmatter_list_items: {}
  warnings: []
