src-tauri/agaric-engine/src/snapshots/agaric_engine__import__tests__corpus_chatgpt_answer.snap
---
source: agaric-engine/src/import.rs
expression: "serde_json::json!({\n    \"import\": output_shape(parse_logseq_markdown(&text)), \"source\":\n    output_shape(parse_source_outline(&text)), \"paste\":\n    blocks_shape(parse_pasted_text(&text)),\n})"
---
import:
  blocks:
    - block_anchor: ~
      content: "Here's a simple plan to get your garden ready for winter:\n### 1. Clean up\n1. **Remove dead plants** – they harbour pests.\n2. **Rake leaves** into a compost pile."
      depth: 0
      is_code: false
      properties: []
    - block_anchor: ~
      content: Shred them first so they break down faster.
      depth: 1
      is_code: false
      properties: []
    - block_anchor: ~
      content: "Avoid diseased leaves.\n### 2. Protect the soil"
      depth: 1
      is_code: false
      properties: []
    - block_anchor: ~
      content: Add a 5–8 cm layer of mulch.
      depth: 0
      is_code: false
      properties: []
    - block_anchor: ~
      content: "Plant a cover crop such as winter rye.\n---\n**Tip:** you can check your soil with:\n```bash\nsoil-test --ph --moisture\n```\nLet me know if you'd like a week-by-week schedule!"
      depth: 0
      is_code: true
      properties: []
  frontmatter: []
  frontmatter_list_items: {}
  warnings: []
paste:
  - block_anchor: ~
    content: "Here's a simple plan to get your garden ready for winter:"
    depth: 0
    is_code: false
    properties: []
  - block_anchor: ~
    content: "### 1. Clean up"
    depth: 0
    is_code: false
    properties: []
  - block_anchor: ~
    content: 1. **Remove dead plants** – they harbour pests.
    depth: 0
    is_code: false
    properties: []
  - block_anchor: ~
    content: 2. **Rake leaves** into a compost pile.
    depth: 0
    is_code: false
    properties: []
  - block_anchor: ~
    content: "- Shred them first so they break down faster."
    depth: 1
    is_code: false
    properties: []
  - block_anchor: ~
    content: "- Avoid diseased leaves."
    depth: 1
    is_code: false
    properties: []
  - block_anchor: ~
    content: "### 2. Protect the soil"
    depth: 0
    is_code: false
    properties: []
  - block_anchor: ~
    content: "- Add a 5–8 cm layer of mulch."
    depth: 0
    is_code: false
    properties: []
  - block_anchor: ~
    content: "- Plant a cover crop such as winter rye."
    depth: 0
    is_code: false
    properties: []
  - block_anchor: ~
    content: "---"
    depth: 0
    is_code: false
    properties: []
  - block_anchor: ~
    content: "**Tip:** you can check your soil with:"
    depth: 0
    is_code: false
    properties: []
  - block_anchor: ~
    content: "```bash"
    depth: 0
    is_code: true
    properties: []
  - block_anchor: ~
    content: soil-test --ph --moisture
    depth: 0
    is_code: false
    properties: []
  - block_anchor: ~
    content: "```"
    depth: 0
    is_code: true
    properties: []
  - block_anchor: ~
    content: "Let me know if you'd like a week-by-week schedule!"
    depth: 0
    is_code: false
    properties: []
source:
  blocks:
    - block_anchor: ~
      content: "Here's a simple plan to get your garden ready for winter:\n\n### 1. Clean up\n\n1. **Remove dead plants** – they harbour pests.\n2. **Rake leaves** into a compost pile."
      depth: 0
      is_code: false
      properties: []
    - block_anchor: ~
      content: Shred them first so they break down faster.
      depth: 1
      is_code: false
      properties: []
    - block_anchor: ~
      content: "Avoid diseased leaves.\n\n### 2. Protect the soil"
      depth: 1
      is_code: false
      properties: []
    - block_anchor: ~
      content: Add a 5–8 cm layer of mulch.
      depth: 0
      is_code: false
      properties: []
    - block_anchor: ~
      content: "Plant a cover crop such as winter rye.\n\n---\n\n**Tip:** you can check your soil with:\n\n```bash\nsoil-test --ph --moisture\n```\n\nLet me know if you'd like a week-by-week schedule!"
      depth: 0
      is_code: true
      properties: []
  frontmatter: []
  frontmatter_list_items: {}
  warnings: []
