src-tauri/agaric-engine/src/snapshots/agaric_engine__import__tests__corpus_code_heavy.snap
---
source: agaric-engine/src/import.rs
expression: "serde_json::json!({\n    \"import\": output_shape(parse_logseq_markdown(&text)), \"source\":\n    output_shape(parse_source_outline(&text)), \"paste\":\n    blocks_shape(parse_pasted_text(&text)),\n})"
---
import:
  blocks:
    - block_anchor: ~
      content: "# Deploy notes\nRun the migration first:\n```bash\n# comment, not a heading"
      depth: 0
      is_code: true
      properties: []
    - block_anchor: ~
      content: "not a bullet\npsql -f migrate.sql\n```\nThen check the config:\n~~~yaml"
      depth: 0
      is_code: true
      properties: []
    - block_anchor: ~
      content: "name: web\nreplicas: 3\n~~~\nHow to document a snippet:\n````md\n```js\nconsole.log(\"hi\")\n```\n- item inside the example\n````\nOld-style indented code:\nmake release"
      depth: 0
      is_code: true
      properties: []
  frontmatter: []
  frontmatter_list_items: {}
  warnings:
    - 1 list-like line(s) inside a code fence were kept as literal code content instead of new blocks
paste:
  - block_anchor: ~
    content: "# Deploy notes"
    depth: 0
    is_code: false
    properties: []
  - block_anchor: ~
    content: "Run the migration first:"
    depth: 0
    is_code: false
    properties: []
  - block_anchor: ~
    content: "```bash"
    depth: 0
    is_code: true
    properties: []
  - block_anchor: ~
    content: "# comment, not a heading"
    depth: 0
    is_code: false
    properties: []
  - block_anchor: ~
    content: "- not a bullet"
    depth: 0
    is_code: false
    properties: []
  - block_anchor: ~
    content: psql -f migrate.sql
    depth: 0
    is_code: false
    properties: []
  - block_anchor: ~
    content: "```"
    depth: 0
    is_code: true
    properties: []
  - block_anchor: ~
    content: "Then check the config:"
    depth: 0
    is_code: false
    properties: []
  - block_anchor: ~
    content: ~~~yaml
    depth: 0
    is_code: false
    properties: []
  - block_anchor: ~
    content: "- name: web"
    depth: 0
    is_code: false
    properties: []
  - block_anchor: ~
    content: "replicas: 3"
    depth: 1
    is_code: false
    properties: []
  - block_anchor: ~
    content: ~~~
    depth: 0
    is_code: false
    properties: []
  - block_anchor: ~
    content: "How to document a snippet:"
    depth: 0
    is_code: false
    properties: []
  - block_anchor: ~
    content: "````md"
    depth: 0
    is_code: true
    properties: []
  - block_anchor: ~
    content: "```js"
    depth: 0
    is_code: true
    properties: []
  - block_anchor: ~
    content: "console.log(\"hi\")"
    depth: 0
    is_code: false
    properties: []
  - block_anchor: ~
    content: "```"
    depth: 0
    is_code: true
    properties: []
  - block_anchor: ~
    content: "- item inside the example"
    depth: 0
    is_code: false
    properties: []
  - block_anchor: ~
    content: "````"
    depth: 0
    is_code: true
    properties: []
  - block_anchor: ~
    content: "Old-style indented code:"
    depth: 0
    is_code: false
    properties: []
  - block_anchor: ~
    content: make release
    depth: 2
    is_code: false
    properties: []
source:
  blocks:
    - block_anchor: ~
      content: "# Deploy notes\n\nRun the migration first:\n\n```bash\n# comment, not a heading"
      depth: 0
      is_code: true
      properties: []
    - block_anchor: ~
      content: "not a bullet\npsql -f migrate.sql\n```\n\nThen check the config:\n\n~~~yaml"
      depth: 0
      is_code: true
      properties: []
    - block_anchor: ~
      content: "name: web\nreplicas: 3\n~~~\n\nHow to document a snippet:\n\n````md\n```js\nconsole.log(\"hi\")\n```\n- item inside the example\n````\n\nOld-style indented code:\n\n  make release"
      depth: 0
      is_code: true
      properties: []
  frontmatter: []
  frontmatter_list_items: {}
  warnings: []
