src-tauri/agaric-engine/src/snapshots/agaric_engine__import__tests__corpus_gdocs_export.snap
---
source: agaric-engine/src/import.rs
expression: "serde_json::json!({\n    \"import\": output_shape(parse_logseq_markdown(&text)), \"source\":\n    output_shape(parse_source_outline(&text)), \"paste\":\n    blocks_shape(parse_pasted_text(&text)),\n})"
---
import:
  blocks:
    - block_anchor: ~
      content: "# Team offsite\n**Date:** 24 September 2026\n## Agenda\n* Welcome\n* Roadmap review\n* Q4 bets\n* Retro\n## Decisions\n1. Move standup to 10:00\n2. Adopt the new on-call rota"
      depth: 0
      is_code: false
      properties: []
  frontmatter: []
  frontmatter_list_items: {}
  warnings: []
paste:
  - block_anchor: ~
    content: "# Team offsite"
    depth: 0
    is_code: false
    properties: []
  - block_anchor: ~
    content: "**Date:** 24 September 2026"
    depth: 0
    is_code: false
    properties: []
  - block_anchor: ~
    content: "## Agenda"
    depth: 0
    is_code: false
    properties: []
  - block_anchor: ~
    content: "* Welcome  "
    depth: 0
    is_code: false
    properties: []
  - block_anchor: ~
    content: "* Roadmap review  "
    depth: 0
    is_code: false
    properties: []
  - block_anchor: ~
    content: "* Q4 bets  "
    depth: 1
    is_code: false
    properties: []
  - block_anchor: ~
    content: "* Retro"
    depth: 0
    is_code: false
    properties: []
  - block_anchor: ~
    content: "## Decisions"
    depth: 0
    is_code: false
    properties: []
  - block_anchor: ~
    content: "1. Move standup to 10:00  "
    depth: 0
    is_code: false
    properties: []
  - block_anchor: ~
    content: 2. Adopt the new on-call rota
    depth: 0
    is_code: false
    properties: []
source:
  blocks:
    - block_anchor: ~
      content: "# Team offsite\n\n**Date:** 24 September 2026\n\n## Agenda\n\n* Welcome  \n* Roadmap review  \n* Q4 bets  \n* Retro\n\n## Decisions\n\n1. Move standup to 10:00  \n2. Adopt the new on-call rota"
      depth: 0
      is_code: false
      properties: []
  frontmatter: []
  frontmatter_list_items: {}
  warnings: []
