src-tauri/agaric-engine/src/snapshots/agaric_engine__import__tests__corpus_github_readme.snap
---
source: agaric-engine/src/import.rs
expression: "serde_json::json!({\n    \"import\": output_shape(parse_logseq_markdown(&text)), \"source\":\n    output_shape(parse_source_outline(&text)), \"paste\":\n    blocks_shape(parse_pasted_text(&text)),\n})"
---
import:
  blocks:
    - block_anchor: ~
      content: "# fastgrep"
      depth: 0
      is_code: false
      properties: []
    - block_anchor: ~
      content: "[![CI](https://github.com/example/fastgrep/actions/workflows/ci.yml/badge.svg)](https://github.com/example/fastgrep/actions)"
      depth: 1
      is_code: false
      properties: []
    - block_anchor: ~
      content: "A tiny, fast grep clone."
      depth: 1
      is_code: false
      properties: []
    - block_anchor: ~
      content: "## Install"
      depth: 1
      is_code: false
      properties: []
    - block_anchor: ~
      content: "```sh\ncargo install fastgrep\n```"
      depth: 2
      is_code: true
      properties: []
    - block_anchor: ~
      content: "## Usage"
      depth: 1
      is_code: false
      properties: []
    - block_anchor: ~
      content: "Build the index: `fastgrep index .`"
      depth: 2
      is_code: false
      properties:
        - - listStyle
          - ordered
    - block_anchor: ~
      content: "Search: `fastgrep find \"needle\"`"
      depth: 2
      is_code: false
      properties:
        - - listStyle
          - ordered
    - block_anchor: ~
      content: "## Features"
      depth: 1
      is_code: false
      properties: []
    - block_anchor: ~
      content: Regex support
      depth: 2
      is_code: false
      properties: []
    - block_anchor: ~
      content: "Respects `.gitignore`"
      depth: 2
      is_code: false
      properties: []
    - block_anchor: ~
      content: including nested ignore files
      depth: 3
      is_code: false
      properties: []
    - block_anchor: ~
      content: "## License"
      depth: 1
      is_code: false
      properties: []
    - block_anchor: ~
      content: MIT
      depth: 2
      is_code: false
      properties: []
  frontmatter: []
  frontmatter_list_items: {}
  warnings: []
paste:
  - block_anchor: ~
    content: "# fastgrep"
    depth: 0
    is_code: false
    properties: []
  - block_anchor: ~
    content: "[![CI](https://github.com/example/fastgrep/actions/workflows/ci.yml/badge.svg)](https://github.com/example/fastgrep/actions)"
    depth: 1
    is_code: false
    properties: []
  - block_anchor: ~
    content: "A tiny, fast grep clone."
    depth: 1
    is_code: false
    properties: []
  - block_anchor: ~
    content: "## Install"
    depth: 1
    is_code: false
    properties: []
  - block_anchor: ~
    content: "```sh\ncargo install fastgrep\n```"
    depth: 2
    is_code: true
    properties: []
  - block_anchor: ~
    content: "## Usage"
    depth: 1
    is_code: false
    properties: []
  - block_anchor: ~
    content: "Build the index: `fastgrep index .`"
    depth: 2
    is_code: false
    properties:
      - - listStyle
        - ordered
  - block_anchor: ~
    content: "Search: `fastgrep find \"needle\"`"
    depth: 2
    is_code: false
    properties:
      - - listStyle
        - ordered
  - block_anchor: ~
    content: "## Features"
    depth: 1
    is_code: false
    properties: []
  - block_anchor: ~
    content: Regex support
    depth: 2
    is_code: false
    properties: []
  - block_anchor: ~
    content: "Respects `.gitignore`"
    depth: 2
    is_code: false
    properties: []
  - block_anchor: ~
    content: including nested ignore files
    depth: 3
    is_code: false
    properties: []
  - block_anchor: ~
    content: "## License"
    depth: 1
    is_code: false
    properties: []
  - block_anchor: ~
    content: MIT
    depth: 2
    is_code: false
    properties: []
source:
  blocks:
    - block_anchor: ~
      content: "# fastgrep"
      depth: 0
      is_code: false
      properties: []
    - block_anchor: ~
      content: "[![CI](https://github.com/example/fastgrep/actions/workflows/ci.yml/badge.svg)](https://github.com/example/fastgrep/actions)"
      depth: 1
      is_code: false
      properties: []
    - block_anchor: ~
      content: "A tiny, fast grep clone."
      depth: 1
      is_code: false
      properties: []
    - block_anchor: ~
      content: "## Install"
      depth: 1
      is_code: false
      properties: []
    - block_anchor: ~
      content: "```sh\ncargo install fastgrep\n```"
      depth: 2
      is_code: true
      properties: []
    - block_anchor: ~
      content: "## Usage"
      depth: 1
      is_code: false
      properties: []
    - block_anchor: ~
      content: "Build the index: `fastgrep index .`"
      depth: 2
      is_code: false
      properties:
        - - listStyle
          - ordered
    - block_anchor: ~
      content: "Search: `fastgrep find \"needle\"`"
      depth: 2
      is_code: false
      properties:
        - - listStyle
          - ordered
    - block_anchor: ~
      content: "## Features"
      depth: 1
      is_code: false
      properties: []
    - block_anchor: ~
      content: Regex support
      depth: 2
      is_code: false
      properties: []
    - block_anchor: ~
      content: "Respects `.gitignore`"
      depth: 2
      is_code: false
      properties: []
    - block_anchor: ~
      content: including nested ignore files
      depth: 3
      is_code: false
      properties: []
    - block_anchor: ~
      content: "## License"
      depth: 1
      is_code: false
      properties: []
    - block_anchor: ~
      content: MIT
      depth: 2
      is_code: false
      properties: []
  frontmatter: []
  frontmatter_list_items: {}
  warnings: []
