src-tauri/agaric-engine/src/snapshots/agaric_engine__import__tests__corpus_logseq_docs_markdown.snap
---
source: agaric-engine/src/import.rs
expression: "serde_json::json!({\n    \"import\": output_shape(parse_logseq_markdown(&text)), \"source\":\n    output_shape(parse_source_outline(&text)), \"paste\":\n    blocks_shape(parse_pasted_text(&text)),\n})"
---
import:
  blocks:
    - block_anchor: ~
      content: Markdown is the most popular format that Logseq supports. Logseq supports most syntaxes including some extended ones.
      depth: 0
      is_code: false
      properties: []
    - block_anchor: ~
      content: "### **Standard** syntax"
      depth: 0
      is_code: false
      properties: []
    - block_anchor: ~
      content: "what's logseq? #card"
      depth: 1
      is_code: false
      properties:
        - - card-last-interval
          - "28.3"
        - - card-repeats
          - "4"
    - block_anchor: ~
      content: knowledge base
      depth: 2
      is_code: false
      properties: []
    - block_anchor: ~
      content: and so on...
      depth: 1
      is_code: false
      properties: []
    - block_anchor: 60a78b6b-a0ff-49fe-822f-87216fbf79ff
      content: "### **Extended** syntax"
      depth: 0
      is_code: false
      properties: []
    - block_anchor: 60ab4582-5a6e-4f3a-84a2-71ae056455a0
      content: "[[term/page reference]]"
      depth: 1
      is_code: false
      properties: []
    - block_anchor: ~
      content: "syntax: `[[page name]]`"
      depth: 2
      is_code: false
      properties: []
  frontmatter:
    - - description
      - "Markdown is a popular markup language with many flavors. Our implementation is parsed by https://github.com/logseq/mldoc."
  frontmatter_list_items: {}
  warnings: []
paste:
  - block_anchor: ~
    content: "description:: Markdown is a popular markup language with many flavors. Our implementation is parsed by https://github.com/logseq/mldoc."
    depth: 0
    is_code: false
    properties: []
  - block_anchor: ~
    content: Markdown is the most popular format that Logseq supports. Logseq supports most syntaxes including some extended ones.
    depth: 0
    is_code: false
    properties: []
  - block_anchor: ~
    content: "### **Standard** syntax"
    depth: 0
    is_code: false
    properties: []
  - block_anchor: ~
    content: "what's logseq? #card"
    depth: 1
    is_code: false
    properties:
      - - card-last-interval
        - "28.3"
      - - card-repeats
        - "4"
  - block_anchor: ~
    content: knowledge base
    depth: 2
    is_code: false
    properties: []
  - block_anchor: ~
    content: and so on...
    depth: 1
    is_code: false
    properties: []
  - block_anchor: ~
    content: "### **Extended** syntax"
    depth: 0
    is_code: false
    properties:
      - - id
        - 60a78b6b-a0ff-49fe-822f-87216fbf79ff
  - block_anchor: ~
    content: "[[term/page reference]]"
    depth: 1
    is_code: false
    properties:
      - - id
        - 60ab4582-5a6e-4f3a-84a2-71ae056455a0
  - block_anchor: ~
    content: "syntax: `[[page name]]`"
    depth: 2
    is_code: false
    properties: []
source:
  blocks:
    - block_anchor: ~
      content: Markdown is the most popular format that Logseq supports. Logseq supports most syntaxes including some extended ones.
      depth: 0
      is_code: false
      properties: []
    - block_anchor: ~
      content: "### **Standard** syntax"
      depth: 0
      is_code: false
      properties: []
    - block_anchor: ~
      content: "what's logseq? #card"
      depth: 1
      is_code: false
      properties:
        - - card-last-interval
          - "28.3"
        - - card-repeats
          - "4"
    - block_anchor: ~
      content: knowledge base
      depth: 2
      is_code: false
      properties: []
    - block_anchor: ~
      content: and so on...
      depth: 1
      is_code: false
      properties: []
    - block_anchor: ~
      content: "### **Extended** syntax"
      depth: 0
      is_code: false
      properties:
        - - id
          - 60a78b6b-a0ff-49fe-822f-87216fbf79ff
    - block_anchor: ~
      content: "[[term/page reference]]"
      depth: 1
      is_code: false
      properties:
        - - id
          - 60ab4582-5a6e-4f3a-84a2-71ae056455a0
    - block_anchor: ~
      content: "syntax: `[[page name]]`"
      depth: 2
      is_code: false
      properties: []
  frontmatter:
    - - description
      - "Markdown is a popular markup language with many flavors. Our implementation is parsed by https://github.com/logseq/mldoc."
  frontmatter_lines:
    description: 1
  frontmatter_list_items: {}
  warnings: []
